src/test/resources/purescript_examples/failing/1570.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ExpectedType\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('M')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSDataDeclarationImpl(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('F')
            PsiElement(whitespace)(' ')
        PSTypeArgsImpl(TypeArgs)
          PSGenericIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('F')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSGenericIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(\)('\')
            PSAbsImpl(Abs)
              PsiElement(()('(')
              PSGenericIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
              PsiElement(::)('::')
              PsiElement(whitespace)(' ')
              PSTypeImpl(Type)
                PSTypeAtomImpl(TypeAtom)
                  PSTypeConstructorImpl(TypeConstructor)
                    PSQualifiedImpl(Qualified)
                      PSProperNameImpl(ProperName)
                        PsiElement(proper name)('F')
              PsiElement())(')')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PSValueImpl(Value)
              PSPrefixValueImpl(PrefixValue)
                PSVarImpl(Var)
                  PSQualifiedImpl(Qualified)
                    PsiElement(identifier)('x')
                    PsiElement(whitespace)('\n')
